# beaglebone

./: CMakeLists.txt  README.md
IEP_timer/: CMakeLists.txt  timer.c  timer.p
capture/: CMakeLists.txt  capture.cpp  config.h  pru.hp  pru.p  pru_capture.p  pru_ext_ddr_mem_1m.conf  pru_spi.p
core/: CMakeLists.txt  config_pins.cpp  config_pins.hpp  pru.cpp  pru.hpp  test_config_pins.cpp  test_core.cpp  utils.cpp  utils.hpp
digcapture/: CMakeLists.txt  NOTE  config.h  digcapture.cc  digcapture.hp  digcapture.p
intc/: CMakeLists.txt  NOTE  config.h  intc.cpp  pru.hp  pru_intc.p
sum/: CMakeLists.txt  sum.cc  sum.hp  sum.p
